--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">POC</string>
+<!--    <string name="app_name">X</string>-->
     <string name="ComposeFragmentLifeCycle">ComposeFragmentLifeCycle</string>
     <string name="onResume">onResume</string>
     <string name="onCreate">onCreate</string>
